@@ -108,7 +108,8 @@ class CF_Snippet_Admin extends CF_Snippet_Base {
 	function post_edit_callback() {
 		global $post;
 		$cf_snippet = new CF_Snippet_Manager();
-		$keys = $cf_snippet->get_keys();
+//		$keys = $cf_snippet->get_keys();
+		$keys = $cf_snippet->get_key_count();
 		include(CFSP_DIR . 'views/post-edit.php');
 	}
 	
