@@ -12,6 +12,10 @@
 - Added ability to edit/create/preview snippets on post pages with appropriate permissions for security.
 - Cleaned up code base.
 - Replace create_function() call with standard function.
+- Typeahead Ajax: convert databasse query using $wpdb to use WP_Query and a custom filter
+- Add esc_attr() to attributes.
+- Change $_REQUEST reference to $_POST, sanitze titles in widget
+- Remove unbounded queries
 
 ## 3.2.3
 - Updated the upgrade routine to be more robust.
